--- a/templates/add_food.html
+++ b/templates/add_food.html
@@ -43,35 +43,40 @@
 
             <div class="panel-body">
 
-              <form method="POST" action="/">
+              <form method="POST" action="{{ url_for('food') }}">
                 <div class="form-group">
                   <label for="food-name">Food Name</label>
-                  <input type="text" class="form-control" id="food-name" placeholder="Food Name">
+                  <input type="text" class="form-control" id="food-name" name="food-name" placeholder="Food Name">
                 </div>
                 <div class="form-group">
                   <label for="protein">Protein</label>
-                  <input type="number" class="form-control" id="protein" placeholder="Protein">
+                  <input type="number" class="form-control" id="protein" name="protein" placeholder="Protein">
                 </div>
                 <div class="form-group">
                   <label for="carbohydrates">Carbohydrates</label>
-                  <input type="number" class="form-control" id="carbohydrates" placeholder="Carbohydrates">
+                  <input type="number" class="form-control" id="carbohydrates" name="carbohydrates" placeholder="Carbohydrates">
                 </div>
                 <div class="form-group">
                   <label for="fat">Fat</label>
-                  <input type="number" class="form-control" id="fat" placeholder="Fat">
+                  <input type="number" class="form-control" id="fat" name="fat" placeholder="Fat">
                 </div>
                 <button type="submit" class="btn btn-primary">Add</button>
               </form>
 
               <div class="page-header"></div>
 
-              <ul class="nav nav-pills" role="tablist">
-                <li class="active"><a>Pizza</a></li>
-                <li><a>Protein: <span class="badge">100</span></a></li>
-                <li><a>Carbohydrates: <span class="badge">200</span></a></li>
-                <li><a>Fat: <span class="badge">50</span></a></li>
-                <li><a>Calories: <span class="badge">1650</span></a></li>
-              </ul>
+              {% for food in results %}
+                <ul class="nav nav-pills" role="tablist">
+                  <li class="active"><a>{{ food.name }}</a></li>
+                  <li><a>Protein: <span class="badge">{{ food.protein }}</span></a></li>
+                  <li><a>Carbohydrates: <span class="badge">{{ food.carbohydrates }}</span></a></li>
+                  <li><a>Fat: <span class="badge">{{ food.fat }}</span></a></li>
+                  <li><a>Calories: <span class="badge">{{ food.calories }}</span></a></li>
+                </ul>
+
+                <div class="page-header"></div>
+
+              {% endfor %}
             </div>
 
           </div>
