Display Dates in Database

--- a/templates/home.html
+++ b/templates/home.html
@@ -45,20 +45,22 @@
 
           <div class="page-header"></div>
 
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h3 class="panel-title">January 28, 2017</h3>
+          {% for r in results %}
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">{{ r.entry_date }}</h3>
+              </div>
+              <div class="panel-body">
+                <ul class="nav nav-pills" role="tablist">
+                  <li><a>Protein: <span class="badge">100</span></a></li>
+                  <li><a>Carbohydates: <span class="badge">200</span></a></li>
+                  <li><a>Fat: <span class="badge">50</span></a></li>
+                  <li><a>Calories: <span class="badge">1650</span></a></li>
+                  <li><a href="#" type="button" class="btn btn-link">View Detail</a></li>
+                </ul>
+              </div>
             </div>
-            <div class="panel-body">
-              <ul class="nav nav-pills" role="tablist">
-                <li><a>Protein: <span class="badge">100</span></a></li>
-                <li><a>Carbohydates: <span class="badge">200</span></a></li>
-                <li><a>Fat: <span class="badge">50</span></a></li>
-                <li><a>Calories: <span class="badge">1650</span></a></li>
-                <li><a href="#" type="button" class="btn btn-link">View Detail</a></li>
-              </ul>
-            </div>
-          </div>
+          {% endfor %}
         </div>
       </div>
 
