--- a/templates/day.html
+++ b/templates/day.html
@@ -36,7 +36,7 @@
         <div>
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">January 28, 2017</h3>
+              <h3 class="panel-title">{{ pretty_date }}</h3>
             </div>
 
             <div class="panel-body">
