Populate options with food items

--- a/templates/day.html
+++ b/templates/day.html
@@ -41,10 +41,12 @@
 
             <div class="panel-body">
 
-              <form method="POST" action="/">
+              <form method="POST" action="{{ url_for('view', date='20230512') }}">
                 <div class="form-group">
-                  <select class="form-control">
-                    <option>1</option>
+                  <select class="form-control" name="food-select">
+                    {% for food in food_results %}
+                      <option value="{{ food.id }}">{{ food.name }}</option>
+                    {% endfor %}
                   </select>
                 </div>
 
