Store daily food items in the database

--- a/templates/day.html
+++ b/templates/day.html
@@ -41,9 +41,10 @@
 
             <div class="panel-body">
 
-              <form method="POST" action="{{ url_for('view', date='20230512') }}">
+              <form method="POST" action="{{ url_for('view', date='20230612') }}">
                 <div class="form-group">
                   <select class="form-control" name="food-select">
+                    {# all the food are passed as options #}
                     {% for food in food_results %}
                       <option value="{{ food.id }}">{{ food.name }}</option>
                     {% endfor %}
