Get list of foods for a day

--- a/templates/day.html
+++ b/templates/day.html
@@ -69,15 +69,17 @@
 
             <div class="page-header"></div>
 
-            <div class="panel-body">
-              <ul class="nav nav-pills" role="tablist">
-                <li class="active"><a>Pizza</a></li>
-                <li><a>Protein: <span class="badge">100</span></a></li>
-                <li><a>Carbohydates: <span class="badge">200</span></a></li>
-                <li><a>Fat: <span class="badge">50</span></a></li>
-                <li><a>Calories: <span class="badge">1650</span></a></li>
-              </ul>
-            </div>
+            {% for result in log_results %}
+              <div class="panel-body">
+                <ul class="nav nav-pills" role="tablist">
+                  <li class="active"><a>{{ result.name }}</a></li>
+                  <li><a>Protein: <span class="badge">100</span></a></li>
+                  <li><a>Carbohydates: <span class="badge">200</span></a></li>
+                  <li><a>Fat: <span class="badge">50</span></a></li>
+                  <li><a>Calories: <span class="badge">1650</span></a></li>
+                </ul>
+              </div>
+            {% endfor %}
 
           </div>
         </div>
