Display Food Totals for Day

--- a/templates/day.html
+++ b/templates/day.html
@@ -59,10 +59,10 @@
 
               <ul class="nav nav-pills" role="tablist">
                 <li class="active"><a>Total</a></li>
-                <li><a>Protein: <span class="badge">100</span></a></li>
-                <li><a>Carbohydates: <span class="badge">200</span></a></li>
-                <li><a>Fat: <span class="badge">50</span></a></li>
-                <li><a>Calories: <span class="badge">1650</span></a></li>
+                <li><a>Protein: <span class="badge">{{ totals.protein }}</span></a></li>
+                <li><a>Carbohydates: <span class="badge">{{ totals.protein }}</span></a></li>
+                <li><a>Fat: <span class="badge">{{ totals.fat }}</span></a></li>
+                <li><a>Calories: <span class="badge">{{ totals.calories }}</span></a></li>
               </ul>
 
             </div>
