Display Sum Totals Per Day

--- a/templates/day.html
+++ b/templates/day.html
@@ -41,7 +41,7 @@
 
             <div class="panel-body">
 
-              <form method="POST" action="{{ url_for('view', date='20230612') }}">
+              <form method="POST" action="{{ url_for('view', date=entry_date) }}">
                 <div class="form-group">
                   <select class="form-control" name="food-select">
                     {# all the food are passed as options #}
