--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
 
       <div class="row">
         <div>
-          <form method="POST" action="/">
+          <form method="POST" action="{{ url_for('index') }}">
             <div class="form-group">
               <label for="new-day">New Day</label>
               <input type="date" name='date' class="form-control" id="new-day">
@@ -48,15 +48,15 @@
           {% for r in results %}
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title">{{ r.entry_date }}</h3>
+                <h3 class="panel-title">{{ r.pretty_date }}</h3>
               </div>
               <div class="panel-body">
                 <ul class="nav nav-pills" role="tablist">
-                  <li><a>Protein: <span class="badge">100</span></a></li>
-                  <li><a>Carbohydates: <span class="badge">200</span></a></li>
-                  <li><a>Fat: <span class="badge">50</span></a></li>
-                  <li><a>Calories: <span class="badge">1650</span></a></li>
-                  <li><a href="#" type="button" class="btn btn-link">View Detail</a></li>
+                  <li><a>Protein: <span class="badge">{{ r.protein }}</span></a></li>
+                  <li><a>Carbohydates: <span class="badge">{{ r.carbohydrates }}</span></a></li>
+                  <li><a>Fat: <span class="badge">{{ r.fat }}</span></a></li>
+                  <li><a>Calories: <span class="badge">{{ r.calories }}</span></a></li>
+                  <li><a href="{{ url_for('view', date=r.entry_date) }}" type="button" class="btn btn-link">View Detail</a></li>
                 </ul>
               </div>
             </div>
