--- a/templates/day.html
+++ b/templates/day.html
@@ -19,12 +19,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Food Tracker</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">Food Tracker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Add Food Item</a></li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('food') }}">Add Food Item</a></li>
           </ul>
         </div>
       </div>
@@ -60,7 +60,7 @@
               <ul class="nav nav-pills" role="tablist">
                 <li class="active"><a>Total</a></li>
                 <li><a>Protein: <span class="badge">{{ totals.protein }}</span></a></li>
-                <li><a>Carbohydates: <span class="badge">{{ totals.protein }}</span></a></li>
+                <li><a>Carbohydates: <span class="badge">{{ totals.carbohydrates }}</span></a></li>
                 <li><a>Fat: <span class="badge">{{ totals.fat }}</span></a></li>
                 <li><a>Calories: <span class="badge">{{ totals.calories }}</span></a></li>
               </ul>
