--- a/templates/day.html
+++ b/templates/day.html
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-    <title>Food Tracker | Day Details</title>
+{% block title %}Food Tracker | Day Details{% endblock %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='theme.css') }}" rel="stylesheet">
-
-  </head>
-
-  <body>
-
+{% block body %}
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -86,7 +73,4 @@
       </div>
 
     </div>
-
-  </body>
-
-</html>
+{% endblock %}
